--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "web-servers",
   "version": "1.0.0",
-  "description": "",
+  "description": "nodejs course",
   "main": "app.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +14,8 @@
     "express": "^4.17.1",
     "hbs": "^4.0.6",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
